--- a/templates/500.html
+++ b/templates/500.html
@@ -1,6 +1,11 @@
-<br/>
-<center>
-    <h1>404 Error</h1>
-    <p>Something Went Wrong, Try Again...</p>
-    
-</center>
+{% extends 'base.html' %}
+
+{% block content %}  
+    <br/>
+    <center>
+        <h1>404 Error</h1>
+        <p>Something Went Wrong, Try Again...</p>
+        
+    </center>
+
+{% endblock %}
