--- a/templates/index.html
+++ b/templates/index.html
@@ -1,20 +1,19 @@
-<h1>Hello World!</h1>
+{% extends 'base.html' %}
 
-<p>This is my first web page!!!</p>
+{% block content %}
 
-<p>My name is {{ first_name }}</p>
+<center>
+<h1>Welcome to Best Digital Portfolios!</h1><br/><br/>
 
-<p>{{ stuff|trim }}</p>
+<h3>Feel free to use any features provided on the website.</h3><br/><br/>
+<h3>NOTE: Some features may require registering an account!</h3>
 
-<h3>Favorite pizza:</h3>
-
-{% for topping in favorite_pizza %}
-    {% if topping == 41 %}
-        {{ topping +100 }}<br/>
-    {% else %}
-    {{ topping }}<br/>
-    {% endif %}
-{% endfor %}
 
 <br/><br/>
-{{ favorite_pizza|reverse }}
+</center>
+
+{% endblock %}
+
+
+
+
